# algorithmic-trading-toolkit

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  cli.py  pyproject.toml  setup.cfg
.config/: .gitignore  system.config.yaml
lib/: database.py
lib/adapters/: database_adapter.py  datasource_adapter.py
lib/adapters/datasource/: alpaca_datasource_adapter.py
lib/adapters/factory/: datasource_adapter_factory.py
lib/adapters/interfaces/: datasource_adapter_interface.py  query_interface.py
lib/commands/: add.py  collect.py  collection.py  configure.py  database.py  datasource.py  query.py  run.py  version.py
lib/models/: __init__.py  base.py  historical_bars.py
lib/models/alpaca/: historical_bar.py
lib/orchestrators/: collection_orchestrator.py
lib/services/: collection.py  collection_runner.py  configuration.py  database.py  datasource.py
lib/services/configuration/: collection.py  configuration.py  database.py  datasource.py  query.py  system.py
lib/services/interface/: config_service.py  configuration_type.py
lib/utils/: config.py  crypto.py  database.py
test/: test_cli.py
test/lib/: test_database.py
test/lib/adapters/: test_database_adapter.py  test_datasource_adapter.py
test/lib/commands/: test_add.py  test_collect.py  test_collection.py  test_configure.py  test_database.py  test_datasource.py  test_query.py  test_version.py
test/lib/models/: test_historical_bars.py
test/lib/orchestrators/: test_collection_orchestrator.py
test/lib/services/: test_collection.py  test_collection_runner.py  test_configuration.py  (+2 more)
(+21 files in other folders)
