[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hdc"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["pyyaml", "sqlalchemy", "psycopg2-binary", "requests", "cryptography"]

[project.scripts]
hdc = "cli:main"

[tool.setuptools]
py-modules = ["cli"]

[tool.setuptools.packages.find]
where = ["."]
include = ["lib*"]
